--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -80,5 +80,13 @@ body {
 #soundbutton {
    position: absolute;
    bottom: 0px;
-   right: 0px;
+   left: 0px;
+}
+
+#kahoot img {
+   width: 300px;
+   position: absolute;
+   bottom: 10px;
+   right: 10px;
+   border-radius: 20px;
 }
