--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,9 @@
 
     <button type="button" id="soundbutton">Mute 🔇</button>
     </div>
+    <div id="kahoot">
+        <img src="/img/kahoot.png" alt="">
+    </div>
 
     <!-- Boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
