--- a/views/credit.ejs
+++ b/views/credit.ejs
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credit</title>
+
+    <link rel="stylesheet" href="/styles/credit .css" />
     <link rel="shortcut icon" href="/img/mint.png" type="image/x-icon">
 </head>
 
