--- a/views/credit.ejs
+++ b/views/credit.ejs
@@ -6,12 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credit</title>
 
-    <link rel="stylesheet" href="/styles/credit .css" />
+    <!-- CSS part -->
+    <!-- Boostrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>SWINBURNer</title>
+    <link rel="stylesheet" href="/styles/credit.css" />
     <link rel="shortcut icon" href="/img/mint.png" type="image/x-icon">
 </head>
 
 <body>
-
+    <div class="credit">
+        <ul>
+            <li>hello</li>
+            <li>hello</li>
+            <li>hello</li>
+        </ul>
+    </div>
 </body>
 
 </html>
