--- a/views/credit.ejs
+++ b/views/credit.ejs
@@ -13,6 +13,8 @@
     <title>SWINBURNer</title>
     <link rel="stylesheet" href="/styles/credit.css" />
     <link rel="shortcut icon" href="/img/mint.png" type="image/x-icon">
+
+    <!-- Font Style -->
 </head>
 
 <body>
