--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,8 +22,8 @@
     <div class="container">
         <div class="d-flex flex-column gap-5">
             <div class="d-flex pointer mt-5 align-items-center ps-5" id="play-button">PLAY</div>
-            <div class="d-flex pointer mt-3 align-items-center ps-5" id="instruction">INSTRUCTION</div>
             <div class="d-flex pointer mt-3 align-items-center ps-5" id="rules">RULES</div>
+            <div class="d-flex pointer mt-3 align-items-center ps-5" id="credit">CREDIT</div>
         </div>
         <div class="" id="logo">
             <img src="/img/swb.png" alt="swb icon" width="250px" height="100px">
