--- a/public/styles/credit.css
+++ b/public/styles/credit.css
@@ -8,8 +8,16 @@ body {
     background-size: cover;
 }
 
+.rock-salt-regular {
+    font-family: "Rock Salt", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
 .credit ul {
     font-size: 100px;
+    font-family: Rock Salt;
     color: aliceblue;
     list-style-type: none;
 }
