--- a/public/styles/credit.css
+++ b/public/styles/credit.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+
 body {
     margin: 0;
     padding: 0;
@@ -6,18 +8,4 @@ body {
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
-}
-
-.rock-salt-regular {
-    font-family: "Rock Salt", cursive;
-    font-weight: 400;
-    font-style: normal;
-}
-
-
-.credit ul {
-    font-size: 100px;
-    font-family: Rock Salt;
-    color: aliceblue;
-    list-style-type: none;
 }
