--- a/views/credit.ejs
+++ b/views/credit.ejs
@@ -18,7 +18,9 @@
 </head>
 
 <body>
-
+    <div id="backBtn">
+        <img src="/img/backBtn.png" alt="" width="150px">
+    </div>
 </body>
 
 </html>
