--- a/public/styles/addquestion.css
+++ b/public/styles/addquestion.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(14, 15, 39);
+    background-color: #AD8B73;
 }
 
 .form {
@@ -15,22 +15,21 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 20px 30px;
-    background-color: rgb(57, 15, 79);
+    background-color: #E3CAA5;
     width: 550px;
-    -webkit-box-shadow: 0px 0px 15px 5px rgba(246, 190, 63, 0.75);
-    -moz-box-shadow: 0px 0px 15px 5px rgba(246, 190, 63, 0.75);
-    box-shadow: 0px 0px 15px 5px rgba(246, 190, 63, 0.75);
+    border-radius: 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 
 #header {
     font-size: 18px;
     font-weight: bold;
     padding: 10px 0px;
-    color: rgb(246, 190, 63);
+    color: black;
 }
 
 #form-messages {
-    background-color: rgb(255, 232, 232);
+    background-color: black;
     border: 1px solid red;
     color: red;
     display: none;
@@ -45,7 +44,7 @@ label {
     display: block;
     font-size: 16px;
     margin: 10px 0px 5px 0px;
-    color: rgb(246, 190, 63);
+    color: black;
 }
 
 input[type='text'],
@@ -57,7 +56,7 @@ select {
 }
 
 #status {
-    background-color: rgb(232, 255, 232);
+    background-color: black;
     border: 1px solid green;
     color: green;
     display: none;
@@ -73,17 +72,18 @@ select {
 }
 
 button {
+    border-radius: 20px;
     display: block;
     padding: 10px 20px;
     background-color: transparent;
-    color: rgb(246, 190, 63);
+    color: black;
     box-shadow: none;
     border-style: none;
     width: 100%;
     margin-top: 20px;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-    border: 2px solid rgb(246, 190, 63);
+    border: 2px solid black;
 }
 
 #question {
