--- a/views/credit.ejs
+++ b/views/credit.ejs
@@ -18,9 +18,16 @@
 </head>
 
 <body>
+    <audio src="/audio/credit.mp3" type="audio/mp3" id="sound" autoplay loop></audio>
+    <audio id="heartbeat" src="/audio/select.mp3" preload="auto">
+        Your browser does not support the <code>audio</code> element.
+    </audio>
+
     <div id="backBtn">
         <img src="/img/backBtn.png" alt="" width="150px">
     </div>
+
+    <script src="/js/credit.js"></script>
 </body>
 
 </html>
