--- a/views/rule.ejs
+++ b/views/rule.ejs
@@ -17,36 +17,41 @@
     <audio id="heartbeat" src="/audio/select.mp3" preload="auto">
         Your browser does not support the <code>audio</code> element.
     </audio>
-    <h1>
-        The game on SWINBURNer is a series of multiple-choice questions that each have four possible
-        answers (A,B,C,D).
-    </h1>
-    <h1>
-        The contestant must answer 10 of these questions correctly, one at a time, in order to win
-        the prize. As soon as the contestant answers a question incorrectly, the game is over
-    </h1>
-    <h1>There 3 Lifelines and each Lifeline can only be used once time per run.</h1>
-    <div class="lifeLines">
-        <div class="hello">
-            <img src="/img/fifty_fifty.png" alt=""><span> Removes two wrong answers from the multiple-choice selection,
-                leaving the contestant with only one correct and one incorrect option.</span>
-        </div>
-        <div class="hello">
-            <img src="/img/audience_poll.png" alt="">
-            <span>The audience is asked the same question as the
-                contestant and a
-                quick poll is done to show their answers.</span>
-        </div>
-        <div class="hello"><img src="/img/ask_the_expert.png" alt="">
-            <span>Contestants are allowed to make a 30-second
-                call to a friend in
-                the
-                audience and ask them if they know the answer to the question</span>
-        </div>
-        <div id="backBtn">
-            <img src="/img/backBtn.png" alt="" width="150px">
+    <div class="gameRules">
+        <h1 id="intro">GAME INTRODUCTION:</h1>
+        <h1>
+            - The game on SWINBURNer is a series of multiple-choice questions that each have four possible
+            answers (A,B,C,D).
+        </h1>
+        <h1>
+            - The contestant must answer 10 of these questions correctly, one at a time, in order to win
+            the prize. As soon as the contestant answers a question incorrectly, the game is over.
+        </h1>
+        <h1>- There 3 Lifelines and each Lifeline can only be used once time per run:</h1>
+        <div class="lifeLines">
+            <div class="hello">
+                <img src="/img/fifty_fifty.png" alt=""><span> Removes two wrong answers from the multiple-choice
+                    selection,
+                    leaving the contestant with only one correct and one incorrect option.</span>
+            </div>
+            <div class="hello">
+                <img src="/img/audience_poll.png" alt="">
+                <span>The audience is asked the same question as the
+                    contestant and a
+                    quick poll is done to show their answers.</span>
+            </div>
+            <div class="hello"><img src="/img/ask_the_expert.png" alt="">
+                <span>Contestants are allowed to make a 30-second
+                    call to a friend in
+                    the
+                    audience and ask them if they know the answer to the question</span>
+            </div>
+            <div id="backBtn">
+                <img src="/img/backBtn.png" alt="" width="150px">
+            </div>
         </div>
     </div>
+
 
     <!-- Javascript -->
     <script src="/js/rule.js" type="text/javascript"></script>
