--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <audio src="/audio/credit.mp3" type="audio/mp3" id="sound" loop></audio>
+    <audio src="/audio/pokemon.mp3" type="audio/mp3" id="sound" loop></audio>
 
     <div class="container">
         <div class="d-flex flex-column gap-5">
