--- a/views/hello.ejs
+++ b/views/hello.ejs
@@ -5,9 +5,10 @@
     <style>
         #myImg {
             position: absolute;
-            bottom: 0px;
+            bottom: 20px;
             width: 100%;
             max-width: 300px;
+            border-radius: 20px;
         }
 
         /* The Modal (background) */
