--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,9 @@
         Your browser does not support the <code>audio</code> element.
     </audio>
 
+    <div id="myModal" class="modal">
+        <img class="modal-content" id="img01">
+    </div>
 
     <div class="container">
         <div class="d-flex flex-column gap-5">
@@ -34,9 +37,8 @@
     </div>
 
     <button type="button" id="soundbutton">Mute 🔇</button>
-    </div>
     <div id="kahoot">
-        <img src="/img/kahoot.png" alt="">
+        <img src="/img/kahoot.png" alt="" id="myImg">
     </div>
     <audio src="/audio/credit.mp3" type="audio/mp3" id="sound" loop></audio>
 
