--- a/public/styles/rule.css
+++ b/public/styles/rule.css
@@ -9,7 +9,7 @@ body {
 }
 
 #backBtn {
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     right: 20px;
 }
@@ -47,4 +47,26 @@ body {
 .hello span {
     margin-left: 40px;
     font-size: 25px;
+}
+
+@media only screen and (max-width: 1600px) {
+    #intro {
+        font-size: 70px;
+    }
+
+    .hello {
+        padding: 10px;
+    }
+
+    body h1 {
+        font-size: 25px;
+    }
+
+    .hello span {
+        font-size: 20px;
+    }
+
+    .hello img {
+        width: 100px;
+    }
 }
