--- a/views/credit.ejs
+++ b/views/credit.ejs
@@ -26,6 +26,8 @@
         <img src="/img/backBtn.png" alt="" width="150px">
     </div>
 
+    <audio src="/audio/credit.mp3" type="audio/mp3" id="sound" loop></audio>
+
 
     <script src="/js/credit.js"></script>
 </body>
