--- a/views/play.ejs
+++ b/views/play.ejs
@@ -105,7 +105,7 @@
       <!-- Ask the Expert Dialog -->
       <div class="dialog" id="ask-the-expert-dialog">
          <!-- <p class="dialog-message" id="ask-the-expert-p"></p> -->
-         <video width="350px" height="200px" controls>
+         <video width="350px" height="200px" id="video" controls>
             <source src="/img/timer.mp4" type="video/mp4">
          </video>
          <button class="dialog-close" id="ask-the-expert-close">
