--- a/public/styles/play.css
+++ b/public/styles/play.css
@@ -135,7 +135,7 @@ main {
     border-radius: 20px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
     margin-bottom: 50px;
-    font-size: larger;
+    font-size: 30px;
     font-weight: bold;
 }
 
@@ -159,7 +159,7 @@ main {
     cursor: pointer;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    font-size: larger;
+    font-size: 25px;
     font-weight: bolder;
 }
 
