--- a/views/play.ejs
+++ b/views/play.ejs
@@ -32,6 +32,11 @@
       <div class="hello" w-100>
          <img src="/img/welcome.gif" alt="">
       </div>
+
+      <div id="myModal" class="modal">
+         <img class="modal-content" id="img01">
+      </div>
+
       <!-- Flip the Question Message -->
       <div class="message" id="flip-the-question-message">
          <h3>
@@ -96,7 +101,7 @@
       <!-- Audience Poll Dialog -->
       <div class="dialog" id="audience-poll-dialog">
          <!-- <canvas id="chart"> </canvas> -->
-         <img src="/img/QRcode.png" alt="QRcode" width="300px" id="qrcode">
+         <img src="/img/QRcode.png" alt="QRcode" width="300px" id="QRcode">
          <button class="dialog-close" id="audience-poll-close">
             Close
          </button>
