--- a/public/styles/play.css
+++ b/public/styles/play.css
@@ -424,13 +424,37 @@ aside {
     justify-content: center;
 }
 
-#qrcode {
-    margin-left: 30px;
-
+#QRcode {
+    margin-left: 35px;
+    border-radius: 20px;
 }
 
 #end-game-dialog {
     cursor: pointer;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+/* Modal Content (Image) */
+.modal-content {
+    border-radius: 20px;
+    margin: auto;
+    display: block;
+    width: 70%;
+    max-width: 500px;
 }
 
 @media only screen and (max-width: 2000px) {
