--- a/views/rule.ejs
+++ b/views/rule.ejs
@@ -18,7 +18,7 @@
         Your browser does not support the <code>audio</code> element.
     </audio>
     <div class="gameRules">
-        <h1 id="intro">GAME INTRODUCTION:</h1>
+        <h1 id="intro">GAME RULES:</h1>
         <h1>
             - The game on SWINBURNer is a series of multiple-choice questions that each have four possible
             answers (A,B,C,D).
